horus_cpp_macros/tests/fail/tuple_struct.rs
use horus_cpp_macros::horus_api;

#[horus_api]
pub struct Wrapper(u32, String);

fn main() {}
